--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,5 +7,27 @@
   <title>Todo List</title>
 </head>
 <body>
+  <div class="header">
+    <div class="hamburger-menu">MENU</div>
+    <div class="logo">TODO LIST</div>
+    <div class="theme">THEME</div>
+  </div>
+  <div class="content">
+    <div class="side-bar">
+      <div class="tasks">
+        <li>All Tasks</li>
+        <li>Today</li>
+        <li>Next 7 Days</li>
+        <li>Starred</li>
+      </div>
+      <div class="projects">
+        <p>Projects</p>
+        <li>Add Project</li>
+      </div>
+    </div>
+    <div class="main-content">
+      <div class="section">Tasks</div>
+    </div>
+  </div>
 </body>
 </html>
