--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,26 @@
 body {
   font-family: 'Lato', sans-serif;
 }
+
+.header {
+  background-color: #e8e8e8;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 5px green;
+}
+
+.content {
+  display: flex;
+}
+
+.side-bar {
+}
+
+.main-content {
+  background-color: #ececec;
+  display: flex;
+  flex-grow: 1;
+}
+
+.main-content .section {
+}
