--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .side-bar {
-  padding: 1em;
+  padding: 1em 1em 0 0.5em;
 }
 
 li {
@@ -36,6 +36,13 @@ li {
 .projects li {
   font-size: 1.1em;
   margin-bottom: 0.5em;
+  padding: 0.3em;
+}
+
+.tasks li:hover,
+.projects li:hover {
+  cursor: pointer;
+  background-color: #ececec;
 }
 
 .projects p {
