Add IDs to task filter buttons

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,10 +15,10 @@
   <div class="content">
     <div class="side-bar">
       <div class="tasks">
-        <li>All Tasks</li>
-        <li>Today</li>
-        <li>Next 7 Days</li>
-        <li>Starred</li>
+        <li id="filter-all">All Tasks</li>
+        <li id="filter-today">Today</li>
+        <li id="filter-seven">Next 7 Days</li>
+        <li id="filter-starred">Starred</li>
       </div>
       <div class="projects">
         <p>Projects</p>
