--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,7 +17,7 @@
       <div class="tasks">
         <li id="filter-all">All Tasks</li>
         <li id="filter-today">Today</li>
-        <li id="filter-seven">Next 7 Days</li>
+        <li id="filter-week">Next 7 Days</li>
         <li id="filter-starred">Starred</li>
       </div>
       <div class="projects">
