--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,6 +22,7 @@
       </div>
       <div class="projects">
         <p>Projects</p>
+        <div id="projects-list"></div>
         <li>Add Project</li>
       </div>
     </div>
