Add div to contain task items

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,6 +28,7 @@
     </div>
     <div class="main-content">
       <div class="section">Tasks</div>
+      <div id="displayed-tasks"></div>
     </div>
   </div>
 </body>
