--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
       <div class="projects">
         <p>Projects</p>
         <div id="projects-list"></div>
-        <li>Add Project</li>
+        <li id="add-project">Add Project</li>
       </div>
     </div>
     <div class="main-content">
