--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
 </head>
+
 <body>
   <div class="header">
     <div class="hamburger-menu">MENU</div>
@@ -29,7 +31,9 @@
     <div class="main-content">
       <div class="section">Tasks</div>
       <div id="displayed-tasks"></div>
+      <div id="add-task"></div>
     </div>
   </div>
 </body>
+
 </html>
