--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="main-content">
-      <div class="section">Tasks</div>
+      <div class="section"></div>
       <div id="displayed-tasks"></div>
       <div id="add-task"></div>
     </div>
