--- a/src/style.css
+++ b/src/style.css
@@ -95,12 +95,22 @@ li {
 
 .dropdown {
   position: absolute;
+  left: 500px;
   font-size: 0.8em;
   width: 130px;
   box-shadow: var(--shadow);
   border-radius: var(--radius);
   margin-top: 0.3rem;
   background: white;
+  transform: translateY(0.5rem);
+  visibility: hidden;
+  opacity: 0;
+}
+
+.show {
+  transform: translateY(0rem);
+  visibility: visible;
+  opacity: 1;
 }
 
 .dropdown a {
