--- a/src/style.css
+++ b/src/style.css
@@ -129,6 +129,74 @@ li {
   color: white;
 }
 
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
+  width: 450px;
+  padding: 1.3rem;
+  min-height: 250px;
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.modal input {
+  padding: 0.7rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 0.9em;
+}
+
+.modal p {
+  font-size: 1.1em;
+  font-weight: bold;
+  margin: 0.4rem 0 0.2rem;
+}
+
+.modal-buttons button {
+  cursor: pointer;
+  border: none;
+  font-weight: 600;
+  margin: 0.1rem;
+  display: inline-block;
+  padding: 0.8rem 1.4rem;
+  font-weight: 700;
+  background-color: var(--green-accent);
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 1em;
+}
+
+.modal-buttons button:nth-child(2) {
+  background-color: #bd2a2a;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
+
 .main-content {
   background-color: #ececec;
   display: flex;
