--- a/src/style.css
+++ b/src/style.css
@@ -93,10 +93,9 @@ li {
   color: var(--white-text);
 }
 
-/* TODO: Adjust position of menu*/
 .dropdown {
   position: absolute;
-  left: 500px;
+  left: 150px;
   font-size: 0.8em;
   width: 130px;
   box-shadow: var(--shadow);
@@ -106,6 +105,7 @@ li {
   transform: translateY(0.5rem);
   visibility: hidden;
   opacity: 0;
+  z-index: 2;
 }
 
 .show {
