Add icon for add project button

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
       <div class="projects">
         <p>Projects</p>
         <div id="projects-list"></div>
-        <li id="add-project">Add Project</li>
+        <li id="add-project"><span class=material-icons>add_circle_outline</span> Project</li>
       </div>
     </div>
     <div class="main-content">
