--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div class="header">
-    <div class="hamburger-menu">MENU</div>
+    <div class="hamburger-menu">
+      <span class=material-icons>menu</span>
+    </div>
     <div class="logo">TODO LIST</div>
     <div class="theme">THEME</div>
   </div>
